@@ -289,7 +289,7 @@ to call this.  It should act much like the inbuilt iconv support in GLIBC.
 
 The iconv module is currently available from:
 
-http://moose.mine.nu:6888/iconv001.zip
+http://moose.mine.nu:6888/iconv002.zip
 
 
 Name registration
